@@ -1,3 +1,4 @@
+- plugin generated commands are run in a local() environment, allowing for more consise code		TODO: document, adjust examples, adjust plugins, etc.
 - also support filename completion in the console (mode of completion is determined by heuristic means)
 - initial support for R's Sys.setlocale(), and Encoding of CHARSXPs
 - in help files, a short title for sections (for the navigation bar) can be defined		TODO: document
